# zero-impl

./: .gitignore  docker-compose.yml  logs-single.txt  logs.txt  main.py  pyproject.toml  test.py
data_sources/bert/: Dockerfile  bert_dataclient.py  bert_datahost.py
data_sources/dev/: Dockerfile  dev_dataclient.py  dev_datahost.py
datasets/dev/: Dockerfile  dev_datahost.py
engine/: communication.py  config.py  profiler.py  sharded_param.py  utils.py  zero_init.py
engine/profilers/: __init__.py  base.py  exec_profiler.py  loss.py  loss_profiler.py  mem_profiler.py  meta_param.py  tensor_profiler.py
engine/utils/: __init__.py  distributed.py  math.py  module_helpers.py  visualization.py
test/: Dockerfile  model.py  train.py  train_dist.py  train_single.py
test/configs/: ddp_cpu_4x.yaml
test/test_bert/: Dockerfile  model.py  train_dist.py  train_single.py
test/test_loss/: Dockerfile  model.py  train_dist.py  train_single.py
test/test_mem/: Dockerfile  model.py  test_profiler.py  train_dist.py  train_single.py
test/test_simple_model/: train_dist.py  train_single.py
test/test_simple_model/data_sources/: random.py
test/test_simple_model/data_sources/bert/: bert_dataset.py
test/test_simple_model/data_sources/dev/: Dockerfile
