[project]
name = "zero-impl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "numpy>=2.3.4",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "torch>=2.9.0",
    "uvicorn>=0.38.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"