[project]
name = "zero-impl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "torch>=2.9.0",
    "uvicorn>=0.38.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "datasets*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
